--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bapu Hotel</title>
         <link rel="shortcut icon" href="/images/bapu_favicon.png" type="image/x-icon">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <!-- JavaScript Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>    
     </head>
     <body class="container-fluid">
         <header>
-            <img width="100%" height="110" src="/images/Hotel.png">
+            <img width="100%" height="110" src="./images/Hotel.png">
         </header>
         <section>
             <div class="accordion" id="RegistrationForm">
@@ -62,7 +62,7 @@
                                         <h3>Deluxe Room</h3>
                                     </div> 
                                     <div class="card-body">
-                                        <img src="/images/Deluxe Room.jpg" width="250" height="180">
+                                        <img src="./images/Deluxe Room.jpg" width="250" height="180">
                                     </div>
                                     <div class="card-footer">
                                         <input id="optDeluxe" value="Deluxe Room" type="radio" name="room"> &#8377; 2500
@@ -75,7 +75,7 @@
                                         <h3>Suite Room</h3>
                                     </div>
                                     <div class="card-body">
-                                        <img src="/images/Suite Room.jpg" width="250" height="180">
+                                        <img src="./images/Suite Room.jpg" width="250" height="180">
                                     </div>
                                     <div class="card-footer">
                                         <input id="optSuite" value="Suite Room" type="radio" name="room"> &#8377; 4000
@@ -102,7 +102,7 @@
                                         <h3>Air Conditioner</h3>
                                     </div>
                                     <div class="card-body">
-                                        <img src="/images/Air Conditioner.jpg" width="300" height="200">
+                                        <img src="./images/Air Conditioner.jpg" width="300" height="200">
                                     </div>
                                     <div class="card-footer">
                                         <input type="checkbox" value="AC" id="optAC"> &#8377; 1000
@@ -115,7 +115,7 @@
                                         <h3>Locker</h3>
                                     </div>
                                     <div class="card-body">
-                                        <img src="/images/Locker.jpg" width="300" height="200">
+                                        <img src="./images/Locker.jpg" width="300" height="200">
                                     </div>
                                     <div class="card-footer">
                                         <input type="checkbox" value="Locker" id="optLocker"> &#8377; 300
@@ -194,7 +194,7 @@
                         </table>
                      </div>
                      <div class="modal-footer">
-                         <button data-dismiss="modal" class="btn btn-primary">OK</button>
+                         <button data-dismiss="modal" class="btn btn-primary" onclick="location.href='success.html'">OK</button>
                      </div>
                 </div>
             </div>
