--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body class="container-fluid">
         <header>
-            <img width="100%" height="140" src="./images/Hotel.png">
+            <img width="100%" height="140" src="./images/Hotel1.jpg">
         </header>
         <section>
             <div class="accordion" id="RegistrationForm">
